evidence/task2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"objects","namespace":"bigdata-lab1"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"objects"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"objects"}},"spec":{"automountServiceAccountToken":false,"containers":[{"args":["mini","-dir=/data","-s3.config=/auth/s3.json"],"command":["weed"],"image":"asia-southeast1-docker.pkg.dev/project-6d752cd4-bbec-4fc9-ba7/bigdata-lab1/seaweedf [...]
  creationTimestamp: "2026-10-04T05:04:14Z"
  generation: 1
  name: objects
  namespace: bigdata-lab1
  resourceVersion: "1791090274296687024"
  uid: 6a255b78-f25f-4365-9f11-0089bb069c0e
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: objects
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: objects
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        - mini
        - -dir=/data
        - -s3.config=/auth/s3.json
        command:
        - weed
        image: asia-southeast1-docker.pkg.dev/project-6d752cd4-bbec-4fc9-ba7/bigdata-lab1/seaweedfs@sha256:8abd9f9e5790b92065d98c75b346445bd40f2233e4b2f91fce632ec080e28b4d
        imagePullPolicy: IfNotPresent
        name: store
        ports:
        - containerPort: 8333
          name: s3
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          tcpSocket:
            port: s3
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /auth
          name: auth
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: object-data
      - name: auth
        secret:
          defaultMode: 420
          items:
          - key: s3.json
            path: s3.json
          secretName: s3-config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-10-04T05:04:34Z"
    lastUpdateTime: "2026-10-04T05:04:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-10-04T05:04:14Z"
    lastUpdateTime: "2026-10-04T05:04:34Z"
    message: ReplicaSet "objects-6cd66d9756" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
