evidence/task2/networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"private-object-store","namespace":"bigdata-lab1"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"access":"s3"}}}],"ports":[{"port":8333,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"objects"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-10-04T03:06:21Z"
    generation: 1
    name: private-object-store
    namespace: bigdata-lab1
    resourceVersion: "1791083181417903006"
    uid: 8f7361c5-f114-4ee5-af10-f5fa2d7a0fcc
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            access: s3
      ports:
      - port: 8333
        protocol: TCP
    podSelector:
      matchLabels:
        app: objects
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
