evidence/task2/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"objects","namespace":"bigdata-lab1"},"spec":{"ports":[{"name":"s3","port":8333,"protocol":"TCP","targetPort":"s3"}],"selector":{"app":"objects"},"type":"ClusterIP"}}
  creationTimestamp: "2026-10-04T05:04:14Z"
  name: objects
  namespace: bigdata-lab1
  resourceVersion: "1791090254488639000"
  uid: 7c76a88d-2168-44a7-b86a-2f3a97e5cdf7
spec:
  clusterIP: 34.118.230.245
  clusterIPs:
  - 34.118.230.245
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: s3
    port: 8333
    protocol: TCP
    targetPort: s3
  selector:
    app: objects
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
